Added 10 products on shop page.

--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -25,7 +25,7 @@
 {% endif %}
 
 {% if category %}
-  {% include "ClubShopBundle:Shop:product_table.html.twig" with {'category':category} %}
+  {% include "ClubShopBundle:Shop:product_table.html.twig" with {'products':category.products} %}
 {% endif %}
 
 {% endblock %}
