Fixed problem when using coupons when not logged in.

--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
@@ -20,7 +20,7 @@
   {% for coupon in coupons %}
     <tr>
       <td>{{ coupon.coupon.couponKey }}</td>
-      <td>{{ coupon.user.profile.name }}</td>
+      <td>{% if coupon.user %}{{ coupon.user.profile.name }}{% else %}{% trans %}Guest{% endtrans %}{% endif %}</td>
       <td>{{ coupon.createdAt|club_datetime }}</td>
     </tr>
   {% else %}
