--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -80,10 +80,11 @@
 
                           {% if is_granted('ROLE_ADMIN') %}
                           <!-- Search -->
+                          {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query', 'input_id':'#query_id'} %}
                           <form action="{{ path('club_user_filter_quick') }}" method="POST" id="search">
                             <fieldset>
                               <legend>{% trans %}Search{% endtrans %}</legend>
-                              <p><input type="text" size="17" name="query" class="input-text" />&nbsp;<input type="submit" value="{% trans %}OK{% endtrans %}" class="input-submit-02" /></p>
+                              <p><input type="text" size="17" id="query" name="query" class="input-text" />&nbsp;<input type="submit" value="{% trans %}OK{% endtrans %}" class="input-submit-02" /></p>
                             </fieldset>
                           </form>
                           {% endif %}
