--- a/src/Club/ShopBundle/Resources/views/Dashboard/admin_order_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Dashboard/admin_order_table.html.twig
@@ -28,6 +28,7 @@
       <td>{{ order.updatedAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_order_edit', { 'id':order.id })} %}
+        {% include "ClubLayoutBundle:Default:payment_link.html.twig" with {'url':path('club_payment_cash_cash_register', { 'order_id':order.id })} %}
       </td>
     </tr>
   {% else %}
