Added translation for group.

--- a/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<h2>{% trans with {'%group%':group.groupName} %}Members Of %group%{% endtrans %}</h2>
+<h2>{% trans with {'%group%':group.groupName} %}Members of %group%{% endtrans %}</h2>
 
 <table class="style">
   <thead>
