--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -2,9 +2,11 @@
 
 {% block body %}
 
+{% if not order.paid %}
 <p class="box">
   <a href="{{ path('club_payment_cash_cash_register', {'order_id':order.id}) }}" class="btn-info"><span>{% trans %}Register payment{% endtrans %}</span></a>
 </p>
+{% endif %}
 
 <h2>{% trans %}Order Information{% endtrans %}</h2>
 
