--- a/src/Club/LayoutBundle/Resources/public/css/mystyle.css
+++ b/src/Club/LayoutBundle/Resources/public/css/mystyle.css
@@ -40,3 +40,5 @@ div#search_box input { width: 200px; }
 table.style th a { color: #FFF; }
 
 table.style td a { color: #000; }
+
+span.label a { color: #fff; }
