--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -4,7 +4,7 @@
 
 {% include "ClubShopBundle:Shop:header.html.twig" %}
 
-{% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
+{% include "ClubShopBundle:Checkout:checkouttop.html.twig" with {'page':'view'} %}
 
 <h3>{% trans %}Order{% endtrans %}</h3>
 <div id="sf_admin_container">
