--- a/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>Payment Information</h2>
 
-{% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
+{% include "ClubShopBundle:Checkout:checkouttop.html.twig" with {'page':'payment'} %}
 
 <form method="POST" action="{{ path('shop_checkout_payment') }}">
 <fieldset>
