--- a/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h3>{% trans %}Review order{% endtrans %}</h3>
 
-{% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
+{% include "ClubShopBundle:Checkout:checkouttop.html.twig" with {'page':'review'} %}
 
 <h3>{% trans %}Order{% endtrans %}</h3>
 <div id="sf_admin_container">
