--- a/src/Club/MessageBundle/Resources/views/AdminMessage/form.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/form.html.twig
@@ -15,8 +15,4 @@
     {{ form_rest(form) }}
   </fieldset>
 
-  <hr class="noscreen" />
-  <div class="box-01">
-    <p class="nom"><input formnovalidate="true" type="submit" value="{% trans %}Save{% endtrans %}" class="input-submit" /></p>
-  </div> <!-- /box-01 -->
-
+  {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'novalidate':true, 'button':'Next'|trans} %}
