--- a/src/Club/RankingBundle/Resources/views/Game/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Game/index.html.twig
@@ -5,13 +5,9 @@
 {% for game in games %}
   <h3>{{ game.name }}</h3>
 
-  {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-  <p class="box">
-    <a href="{{ path('club_ranking_match_new', {'game_id':game.id}) }}" class="btn-create"><span>{% trans %}Create match{% endtrans %}</span></a>
-  </p>
-  {% endif %}
-
+  {% include "ClubRankingBundle:Game:match_button.html.twig" %}
   {% include "ClubRankingBundle:Game:game_table.html.twig" %}
+
 {% else %}
   <p>{% trans %}There are no games.{% endtrans %}</p>
 {% endfor %}
