Added invite only to game list.

--- a/src/Club/RankingBundle/Resources/views/AdminGame/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminGame/index.html.twig
@@ -8,13 +8,14 @@
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
       <th>{% trans %}Set{% endtrans %}</th>
+      <th>{% trans %}Invite only{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="4">&#160;</td>
+      <td colspan="5">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
@@ -22,6 +23,7 @@
     <tr>
       <td>{{ game.name }}</td>
       <td>{{ game.gameSet }}</td>
+      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':game.inviteOnly} %}</td>
       <td>{{ game.createdAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_ranking_admingame_edit', { 'id':game.id })} %}
@@ -31,7 +33,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">{% trans %}There are no games.{% endtrans %}</td>
+    <td colspan="5">{% trans %}There are no games.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
