--- a/src/Club/MatchBundle/Resources/views/AdminLeague/edit.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminLeague/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_match_admingame_edit', {'id':game.id}) }}">
+<form method="post" action="{{ path('club_match_adminleague_edit', {'id':league.id}) }}">
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
