--- a/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
@@ -5,7 +5,7 @@
 <h2>{% trans %}Users{% endtrans %}</h2>
 
 {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#form_user','input_id':'#form_user_id'} %}
-<form method="post" action="{{ path('club_match_admingame_usersadd', {'id':game.id}) }}">
+<form method="post" action="{{ path('club_match_adminleague_usersadd', {'id':league.id}) }}">
   <fieldset>
     <legend>{% trans %}Add user{% endtrans %}</legend>
     {{ form_widget(form) }}
@@ -17,7 +17,7 @@
   <thead>
     <tr>
       <th>{% trans %}Number{% endtrans %}</th>
-      <th>{% trans %}Name{% endtrans %}</th>
+      <th>{% trans %}League{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
@@ -27,17 +27,17 @@
     </tr>
   </tfoot>
   <tbody>
-  {% for user in game.users %}
+  {% for user in league.users %}
     <tr>
       <td>{{ user.memberNumber }}</td>
-      <td>{{ user.name }}</td>
+      <td>{{ user.league }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_match_admingame_usersdelete', { 'id':game.id, 'user_id':user.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_match_adminleague_usersdelete', { 'id':league.id, 'user_id':user.id })} %}
       </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">{% trans %}There are no users in the game.{% endtrans %}</td>
+    <td colspan="4">{% trans %}There are no users in the league.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
