Fixed migration for rename to league.

--- a/src/Club/MatchBundle/Resources/views/Match/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/show.html.twig
@@ -23,7 +23,7 @@
     </tr>
   </tfoot>
   <tbody>
-    {% include "ClubMatchBundle:Game:match.html.twig" with {'nocomment':true} %}
+    {% include "ClubMatchBundle:League:match.html.twig" with {'nocomment':true} %}
   </tbody>
 </table>
 
