Added recent matches as render.

--- a/src/Club/MatchBundle/Resources/views/League/RecentMatches.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/RecentMatches.html.twig
@@ -14,7 +14,7 @@
     </tr>
   </tfoot>
   <tbody>
-    {% for match in league.matches %}
+    {% for match in matches %}
       {% include "ClubMatchBundle:League:match.html.twig" %}
     {% else %}
     <tr>
