--- a/src/Club/MatchBundle/Resources/views/League/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/index.html.twig
@@ -7,6 +7,7 @@
 
   {% include "ClubMatchBundle:League:match_button.html.twig" %}
   {% render "ClubMatchBundle:League:RecentMatches" with {'id':league.id} %}
+  {% render "ClubMatchBundle:League:Top" with {'id':league.id} %}
 
 {% else %}
   <p>{% trans %}There are no leagues.{% endtrans %}</p>
