--- a/src/Club/MatchBundle/Resources/views/League/table_entry.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/table_entry.html.twig
@@ -4,6 +4,7 @@
       <td>{{ team.played }}</td>
       <td>{{ team.won }}</td>
       <td>{{ team.lost }}</td>
-      <td>{{ team.percentWon }}</td>
+      <td>{{ team.percentWon }}%</td>
+      <td>{{ team.point }}</td>
     </tr>
 
