--- a/src/Club/MatchBundle/Resources/views/League/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/show.html.twig
@@ -19,7 +19,7 @@
       {% endif %}
     </tr>
     <tr>
-      <th>{% trans %}Game set{% endtrans %}</th>
+      <th>{% trans %}Sets per match{% endtrans %}</th>
       <td>{{ league.gameSet }}</td>
     </tr>
     <tr>
@@ -31,7 +31,7 @@
       <td>{{ league.rule.pointLost }}</td>
     </tr>
     <tr>
-      <th>{% trans %}Meat same player{% endtrans %}</th>
+      <th>{% trans %}Matches with same opponent{% endtrans %}</th>
       <td>{{ league.rule.matchSamePlayer }}</td>
     </tr>
 
