--- a/src/Club/MatchBundle/Resources/views/League/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/index.html.twig
@@ -6,7 +6,7 @@
   <h3><a href="{{ path('club_match_league_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
 
   {% include "ClubMatchBundle:League:match_button.html.twig" %}
-  <h4>{% trans %}Ranking{% endtrans %}
+  <h4>{% trans %}Ranking{% endtrans %}</h4>
   {% render "ClubMatchBundle:League:Top" with {'id':league.id, 'limit':4} %}
 
   <h4>{% trans %}Recent matches{% endtrans %}</h4>
