--- a/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
@@ -2,12 +2,12 @@
 
 {% block body %}
 
-<h2>{% trans %}Users{% endtrans %}</h2>
+<h2>{% trans %}Add players to league{% endtrans %}</h2>
 
 {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#form_user','input_id':'#form_user_id'} %}
 <form method="post" action="{{ path('club_match_adminleague_usersadd', {'id':league.id}) }}">
   <fieldset>
-    <legend>{% trans %}Add user{% endtrans %}</legend>
+    <legend>{% trans %}Add player{% endtrans %}</legend>
 
     <p>{% trans %}Here you can add players for this tournament.{% endtrans %}</p>
     {{ form_widget(form) }}
