--- a/src/Club/UserBundle/Resources/views/Member/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query_query', 'input_id':''} %}
+{% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query_query', 'input_id':'','url':'api/users/search'} %}
 
 <h2>{% trans %}Members{% endtrans %}</h2>
 
