--- a/src/Club/LayoutBundle/Resources/views/Default/ajax_user.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/ajax_user.html.twig
@@ -7,7 +7,7 @@
     $( "{{ search_field }}" ).autocomplete({
       source: function( request, response ) {
         $.ajax({
-          url: url + "api/users/search/" + $("{{ search_field }}").attr("value"),
+          url: url + "{{ url }}/" + $("{{ search_field }}").attr("value"),
           dataType: "json",
           success: function( data ) {
             response( $.map( data.data, function( item ) {
