--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -80,7 +80,7 @@
 
                           {% if is_granted('ROLE_ADMIN') %}
                           <!-- Search -->
-                          {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query', 'input_id':'#query_id'} %}
+                          {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query', 'input_id':'#query_id','url':'api/users/search'} %}
                           <form action="{{ path('club_user_filter_quick') }}" method="POST" id="search">
                             <fieldset>
                               <legend>{% trans %}Search{% endtrans %}</legend>
