Translated match module.

--- a/src/Club/MatchBundle/Resources/views/AdminLeague/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminLeague/index.html.twig
@@ -21,7 +21,7 @@
   {% for league in leagues %}
     <tr>
       <td>{{ league.name }}</td>
-      <td>{% if league.inviteOnly %}Invite only{% else %}Open for all{% endif %}</td>
+      <td>{% if league.inviteOnly %}Invite only{% else %}{% trans %}Open for all{% endtrans %}{% endif %}</td>
       <td>{{ league.createdAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_match_adminleague_edit', { 'id':league.id })} %}
